package NDnnProto;


message TLogExpConst {
    optional double R0 = 1;
    optional double U0 = 2;
    optional double Ua = 3;
}

